# SALMONN

./: pyproject.toml  requirements.txt
SALMONN/: utils.py
SALMONN/models/: salmonn.py
SALMONN/prompts/: prompts.py
salmonn/: utils.py
salmonn/models/: salmonn.py
