# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SALMONN"
description = "SALMONN: Speech Audio Language Music Open Neural Network"
requires-python = "==3.9.17"
readme = "README.md"
dynamic = ["version"]

[tool.setuptools]
packages = ["SALMONN"]

[tool.ruff]
target-version = "py39"
extend-include = ["*.ipynb"]
extend-exclude = ["submodules"]

# Line length 120 to makes it easier to have multiple files open side-by-side.
line-length = 120

[tool.ruff.lint]
# Check that imports are sorted
extend-select = ["I"]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
